--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -47,12 +47,11 @@ header {
 }
 .menu-home {
     display: flex;
-    width: 1440px;
-    margin: 0 auto;
 }
 .menu_items {
     margin-top: 51px;
     width: 167px;
+
 }
 .menu-items--elements {
     display: block;
@@ -60,15 +59,19 @@ header {
     padding: 16px 0;
     color: black;
     font-size: 16px;
-    font-weight: regular;
+    border-bottom: 1px solid #EBEBEB;
+    margin-left: -100px;
+    padding-left: 100px;
+    border-radius: 0 10px 10px 0
 }
+
 .menu-items--elements:hover {
     color: blue;
     transition: 0.7s;
     
 }
 .menu-items--elements.active{
-    background-color: blue;
+    background-color: #1400FF;
     color: white;
 }
 
@@ -83,3 +86,4 @@ header {
     width: 100%;
     
 }
+
